[B]Version 1.0.5[/B]
- Changes version number to (hopefully) force download

[B]Version 1.0.4[/B]
- Fix cache dir creation

[B]Version 1.0.3[/B]
- Added support for using this module with scripts as well as plugins

[B]Version 1.0.2[/B]
- Load ADDON_ID from folder name instead of first argument to make the module work for scripts as well

[B]Version 1.0.1[/B]
- Added downloadUrl(..) and decodeHtmlEntities(..) to web module
- Added pydoc documentation to methods

[B]Version 1.0.0[/B]
- Initial version