@@ -1,0 +1,4 @@
+__author__ = 'twi'
+
+def translatePath(path):
+    return path
