@@ -1,0 +1,16 @@
+__author__ = 'twi'
+
+def setContent(handle, type):
+    pass
+
+def setPluginCategory(handle, category):
+    pass
+
+def addDirectoryItem(handle, url, item, isDirectory):
+    pass
+
+def endOfDirectory(handle):
+    pass
+
+
+  
